[package]
name = "oxybencode"
version = "0.1.0"
edition = "2018"
authors = ["Antoon Beres <antoonberes@hotmail.com>"]
license = "Apache-2.0 OR BSD-3-Clause"
description = "A simple user-friendly bencoding encoder/decoder"
readme = "README.md"
repository = "https://github.com/AntoonBeres/oxybencode"
keywords = ["torrent", "bencoding", "bencode", "parser"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools = "0.10"
